--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
     <ul class="projects-main">
       <li class="project-main">
         <a href="https://github.com/Iwlj4s/dog-run" target="_blank">
-          <img class="project-img-main" src="img/dog-run.png" alt="">
-          <h3 class="project-title-main">Dog Run!</h3>
+          <img class="project-img-main" src="img/WAWE.png" alt="">
+          <h3 class="project-title-main">WAWE</h3>
         </a>
-          <h4 class="project-subtitle-main">It's mini project on pygame</h4>
+          <h4 class="project-subtitle-main">Web-Site of surf school in the Canary Islands</h4>
         </li>
     </ul>
   </div>
