--- a/projects.html
+++ b/projects.html
@@ -24,10 +24,18 @@
 
       <div class="container-second">
         <ul class="projects-second">
+          <li class="project-second">
+            <a href="https://github.com/Iwlj4s/dog-run" target="_blank">
+                <img class="project-img-second" src="img/WAWE.png" alt="">
+                <h2>Last Project</h2>
+                <h3 class="project-title-second">WAWE</h3>
+              </a>
+                <h4 class="project-subtitle-second">Web-Site of surf school in the Canary Islands</h4>
+              </li>
             <li class="project-second">
             <a href="https://github.com/Iwlj4s/dog-run" target="_blank">
                 <img class="project-img-second" src="img/dog-run.png" alt="">
-                <h2>Last Project</h2>
+                <h2>05.05.2023</h2>
                 <h3 class="project-title-second">Dog Run!</h3>
               </a>
                 <h4 class="project-subtitle-second">It's mini project on pygame</h4>
