--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <div class="container-main">
     <ul class="projects-main">
       <li class="project-main">
-        <a href="https://github.com/Iwlj4s/dog-run" target="_blank">
+        <a href="https://iwlj4s.github.io/wawe/" target="_blank">
           <img class="project-img-main" src="img/WAWE.png" alt="">
           <h3 class="project-title-main">WAWE</h3>
         </a>
