--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
       <div class="container-second">
         <ul class="projects-second">
           <li class="project-second">
-            <a href="https://github.com/Iwlj4s/dog-run" target="_blank">
+            <a href="https://iwlj4s.github.io/wawe/" target="_blank">
                 <img class="project-img-second" src="img/WAWE.png" alt="">
                 <h2>Last Project</h2>
                 <h3 class="project-title-second">WAWE</h3>
