--- a/projects.html
+++ b/projects.html
@@ -25,9 +25,17 @@
       <div class="container-second">
         <ul class="projects-second">
           <li class="project-second">
+            <a href="https://github.com/Iwlj4s/pywithGUI" target="_blank">
+                <img class="project-img-second" src="img/pywithgui.png" alt="">
+                <h2>07.05.2023</h2>
+                <h3 class="project-title-second">Find the discriminant and it's roots</h3>
+              </a>
+                <h4 class="project-subtitle-second">This mini app is like college assignment.</h4>
+              </li>
+          <li class="project-second">
             <a href="https://iwlj4s.github.io/wawe/" target="_blank">
                 <img class="project-img-second" src="img/WAWE.png" alt="">
-                <h2>Last Project</h2>
+                <h2></h2>
                 <h3 class="project-title-second">WAWE</h3>
               </a>
                 <h4 class="project-subtitle-second">Web-Site of surf school in the Canary Islands</h4>
@@ -50,6 +58,5 @@
             </li>
         </ul>
       </div>
-    
 </body>
 </html>
