--- a/index.html
+++ b/index.html
@@ -1,13 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="js/date.js">
-    <title>Web - Iwlj4s</title>
-</head>
 <body>
   <header id="topnav">
         <div class="inner">
@@ -38,11 +28,11 @@
   <div class="container-main">
     <ul class="projects-main">
       <li class="project-main">
-        <a href="https://iwlj4s.github.io/wawe/" target="_blank">
-          <img class="project-img-main" src="img/WAWE.png" alt="">
-          <h3 class="project-title-main">WAWE</h3>
+        <a href="https://github.com/Iwlj4s/pywithGUI" target="_blank">
+          <img class="project-img-main" src="img/pywithgui.png" alt="">
+          <h3 class="project-title-main">Find the discriminant and it's roots</h3>
         </a>
-          <h4 class="project-subtitle-main">Web-Site of surf school in the Canary Islands</h4>
+          <h4 class="project-subtitle-main">This mini app is like college assignment.</h4>
         </li>
     </ul>
   </div>
