--- a/projects.html
+++ b/projects.html
@@ -25,25 +25,36 @@
       <div class="container-second">
         <ul class="projects-second">
           <li class="project-second">
+            <a href="https://github.com/Iwlj4s/simple_gallows_game" target="_blank">
+                <img class="project-img-second" src="img/gallowsgame.png" alt="">
+                <h2>last project</h2>
+                <h3 class="project-title-second">Gallows Game</h3>
+              </a>
+                <h4 class="project-subtitle-second">Just enter the letters and try to guess the word.</h4>
+              </li>
+          <li class="project-second">
             <a href="https://github.com/Iwlj4s/pywithGUI" target="_blank">
                 <img class="project-img-second" src="img/pywithgui.png" alt="">
-                <h2>07.05.2023</h2>
-                <h3 class="project-title-second">Find the discriminant and it's roots</h3>
-              </a>
-                <h4 class="project-subtitle-second">This mini app is like college assignment.</h4>
+                <img class="project-img-second" src="img/pywithguis.png" alt="">
+                    <h2>07.05.2023</h2>
+                    <h3 class="project-title-second">Find the discriminant and it's roots</h3>
+                    </a>
+                    <h4 class="project-subtitle-second">This mini app is like college assignment.</h4>
               </li>
           <li class="project-second">
             <a href="https://iwlj4s.github.io/wawe/" target="_blank">
                 <img class="project-img-second" src="img/WAWE.png" alt="">
-                <h2></h2>
-                <h3 class="project-title-second">WAWE</h3>
-              </a>
-                <h4 class="project-subtitle-second">Web-Site of surf school in the Canary Islands</h4>
+                <div class="wawe-titles">
+                  <h2>10.04.2023</h2>
+                  <h3 class="project-title-second">WAWE</h3>
+                  </a>
+                    <h4 class="project-subtitle-second">Web-Site of surf school in the Canary Islands</h4>
+                </div>
               </li>
             <li class="project-second">
             <a href="https://github.com/Iwlj4s/dog-run" target="_blank">
                 <img class="project-img-second" src="img/dog-run.png" alt="">
-                <h2>05.05.2023</h2>
+                <h2>05.04.2023</h2>
                 <h3 class="project-title-second">Dog Run!</h3>
               </a>
                 <h4 class="project-subtitle-second">It's mini project on pygame</h4>
@@ -51,7 +62,7 @@
             <li class="project-second">
                 <a href="https://iwlj4s.github.io/-iwlj4s-IP-IS-21-Virusology-/njrat.html" target="_blank">
                 <img class="project-img-second" src="img/Virusology.png" alt="">
-                <h2>09.10.2023</h2>
+                <h2>09.10.2022</h2>
                 <h3 class="project-title-second">Virusology</h3>
                 </a>
                 <h4 class="project-subtitle-second">It's little projets for college</h4>
