--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
   <div class="container-main">
     <ul class="projects-main">
       <li class="project-main">
-        <a href="https://github.com/Iwlj4s/pywithGUI" target="_blank">
-          <img class="project-img-main" src="img/pywithgui.png" alt="">
-          <h3 class="project-title-main">Find the discriminant and it's roots</h3>
+        <a href="https://github.com/Iwlj4s/simple_gallows_game" target="_blank">
+          <img class="project-img-main" src="img/gallowsgame.png" alt="">
+          <h3 class="project-title-main">Gallows Game</h3>
         </a>
-          <h4 class="project-subtitle-main">This mini app is like college assignment.</h4>
+          <h4 class="project-subtitle-main">Just enter the letters and try to guess the word.</h4>
         </li>
     </ul>
   </div>
