--- a/projects.html
+++ b/projects.html
@@ -25,9 +25,21 @@
       <div class="container-second">
         <ul class="projects-second">
           <li class="project-second">
+            <a href="https://github.com/Iwlj4s/random_dice" target="_blank">
+                <img class="project-img-second" src="img/randomdice.png" alt="">
+                <img class="project-img-second" src="img/rrandomdices.png" alt="">
+                <h2>Last Project</h2>
+                <h3 class="project-title-second">Random Dice</h3>
+              </a>
+                <h4 class="project-subtitle-second"> It's just random dice</h4>
+                <a class="yd" href="https://www.dropbox.com/scl/fo/02858terwj88cwwxmsbky/h?dl=0&rlkey=m5j3jr7j93r032ovkudiknfi5" target="_blank">
+                  You can download it
+                </a>
+              </li>
+          <li class="project-second">
             <a href="https://github.com/Iwlj4s/simple_gallows_game" target="_blank">
                 <img class="project-img-second" src="img/gallowsgame.png" alt="">
-                <h2>last project</h2>
+                <h2>09.06.2023</h2>
                 <h3 class="project-title-second">Gallows Game</h3>
               </a>
                 <h4 class="project-subtitle-second">Just enter the letters and try to guess the word.</h4>
