--- a/index.html
+++ b/index.html
@@ -38,11 +38,15 @@
   <div class="container-main">
     <ul class="projects-main">
       <li class="project-main">
-        <a href="https://github.com/Iwlj4s/simple_gallows_game" target="_blank">
-          <img class="project-img-main" src="img/gallowsgame.png" alt="">
-          <h3 class="project-title-main">Gallows Game</h3>
+        <a href="https://github.com/Iwlj4s/random_dice" target="_blank">
+          <img class="project-img-second" src="img/randomdice.png" alt="">
+          <img class="project-img-second" src="img/rrandomdices.png" alt="">
+          <h3 class="project-title-main">Random Dice</h3>
         </a>
-          <h4 class="project-subtitle-main">Just enter the letters and try to guess the word.</h4>
+          <h4 class="project-subtitle-main">It's just random dice</h4>
+          <a class="yd" href="https://www.dropbox.com/scl/fo/02858terwj88cwwxmsbky/h?dl=0&rlkey=m5j3jr7j93r032ovkudiknfi5" target="_blank">
+            You can download it
+          </a>
         </li>
     </ul>
   </div>
