--- a/index.html
+++ b/index.html
@@ -38,13 +38,12 @@
   <div class="container-main">
     <ul class="projects-main">
       <li class="project-main">
-        <a href="https://github.com/Iwlj4s/random_dice" target="_blank">
-          <img class="project-img-second" src="img/randomdice.png" alt="">
-          <img class="project-img-second" src="img/rrandomdices.png" alt="">
-          <h3 class="project-title-main">Random Dice</h3>
+        <a href="https://github.com/Iwlj4s/SnakeGame" target="_blank">
+          <img class="project-img-second" src="img/snakegame.png" alt="">
+          <h3 class="project-title-main">Snake Game</h3>
         </a>
-          <h4 class="project-subtitle-main">It's just random dice</h4>
-          <a class="yd" href="https://www.dropbox.com/scl/fo/02858terwj88cwwxmsbky/h?dl=0&rlkey=m5j3jr7j93r032ovkudiknfi5" target="_blank">
+          <h4 class="project-subtitle-main">It's simple snake</h4>
+          <a class="yd" href="https://www.dropbox.com/s/i82idllfneqh2ts/SnakeGameSetup.exe?dl=0" target="_blank">
             You can download it
           </a>
         </li>
