--- a/projects.html
+++ b/projects.html
@@ -25,10 +25,21 @@
       <div class="container-second">
         <ul class="projects-second">
           <li class="project-second">
-            <a href="https://github.com/Iwlj4s/random_dice" target="_blank">
-                <img class="project-img-second" src="img/randomdice.png" alt="">
-                <img class="project-img-second" src="img/rrandomdices.png" alt="">
+            <a href="https://github.com/Iwlj4s/SnakeGame" target="_blank">
+                <img class="project-img-second" src="img/snakegame.png" alt="">
                 <h2>Last Project</h2>
+                <h3 class="project-title-second">Snake Game</h3>
+              </a>
+                <h4 class="project-subtitle-second"> It's simple snake</h4>
+                <a class="yd" href="https://www.dropbox.com/s/i82idllfneqh2ts/SnakeGameSetup.exe?dl=0" target="_blank">
+                  You can download it
+                </a>
+              </li>
+          <li class="project-second">
+            <a href="https://github.com/Iwlj4s/random_dice" target="_blank">
+              <img class="project-img-second" src="img/rrandomdices.png" alt="">
+              <img class="project-img-second" src="img/randomdice.png" alt="">
+                <h2>10.06.2023</h2>
                 <h3 class="project-title-second">Random Dice</h3>
               </a>
                 <h4 class="project-subtitle-second"> It's just random dice</h4>
