--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <h3 class="project-title-main">Snake Game</h3>
         </a>
           <h4 class="project-subtitle-main">It's simple snake</h4>
-          <a class="yd" href="https://www.dropbox.com/s/i82idllfneqh2ts/SnakeGameSetup.exe?dl=0" target="_blank">
+          <a class="yd" href="https://www.dropbox.com/scl/fo/iqrl6rp1f06e4yvo2850l/h?dl=0&rlkey=3nw1m9pcupu6yg8it0jh7gwv6" target="_blank">
             You can download it
           </a>
         </li>
