--- a/index.html
+++ b/index.html
@@ -38,14 +38,11 @@
   <div class="container-main">
     <ul class="projects-main">
       <li class="project-main">
-        <a href="https://github.com/Iwlj4s/SnakeGame" target="_blank">
-          <img class="project-img-second" src="img/snakegame.png" alt="">
-          <h3 class="project-title-main">Snake Game</h3>
+        <a href="https://github.com/Iwlj4s/weather_app" target="_blank">
+          <img class="project-img-second" src="img/weather.png" alt="">
+          <h3 class="project-title-main">Weather App</h3>
         </a>
-          <h4 class="project-subtitle-main">It's simple snake</h4>
-          <a class="yd" href="https://www.dropbox.com/scl/fo/iqrl6rp1f06e4yvo2850l/h?dl=0&rlkey=3nw1m9pcupu6yg8it0jh7gwv6" target="_blank">
-            You can download it
-          </a>
+          <h4 class="project-subtitle-main">It's mini weather app</h4>
         </li>
     </ul>
   </div>
