--- a/projects.html
+++ b/projects.html
@@ -25,9 +25,17 @@
       <div class="container-second">
         <ul class="projects-second">
           <li class="project-second">
+            <a href="https://github.com/Iwlj4s/weather_app" target="_blank">
+                <img class="project-img-second" src="img/weather.png" alt="">
+                <h2>Last Project</h2>
+                <h3 class="project-title-second">Weather app</h3>
+              </a>
+                <h4 class="project-subtitle-second"> It's mini weather app</h4>
+              </li>
+          <li class="project-second">
             <a href="https://github.com/Iwlj4s/SnakeGame" target="_blank">
                 <img class="project-img-second" src="img/snakegame.png" alt="">
-                <h2>Last Project</h2>
+                <h2>10.06.2023</h2>
                 <h3 class="project-title-second">Snake Game</h3>
               </a>
                 <h4 class="project-subtitle-second"> It's simple snake</h4>
